--- a/my-app/src/components/Header/Header.scss
+++ b/my-app/src/components/Header/Header.scss
@@ -12,10 +12,11 @@
         color: #b55a5d; 
         text-align: center;
         border-radius: 20px;
-        padding: 10px; 
         background: #fde4ee; 
         border: 2px solid #b55a5d; 
         margin: 10px;
+        font-family: "Courier", monospace;
+        font-weight: 600;
     }
 
     &_beautyButton {
