--- a/my-app/src/components/Graph2D/UI2D/Func/Func.scss
+++ b/my-app/src/components/Graph2D/UI2D/Func/Func.scss
@@ -9,4 +9,14 @@
         border: 2px solid #b55a5d; 
         margin: 10px;
     }
+
+    &_beautyButton {
+        border-radius: 20px;
+        padding: 10px; 
+        background: rgb(255, 227, 232); 
+        border: 2px solid #b55a5d; 
+        margin: 10px;
+        font-size: 15px;
+        color: #b55a5d; 
+    }
 }
